Visuel des liens retiré dans les articles

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,10 +98,7 @@ article{
     top: 150px;
 }
 
-.contenu a{
-    text-decoration: none;
-}
-.contenu a:active{
+article a:link{
     text-decoration: none;
 }
 
