--- a/css/styles.css
+++ b/css/styles.css
@@ -31,32 +31,55 @@ header {
     z-index: 3;
 }
 
-#overlay-1 {
-    background: rgb(123, 178, 154, 0.4);
+#overlay {
+    /*background: rgb(123, 178, 154, 0.4);*/
+    background: rgb(0, 0, 0, 0.3);
     width: 100%;
     height: 300px;
     position: absolute;
     z-index: 1;
 }
 
-.menu-1 {
+.menu-1{
+    background-image: url('https://groupe-egae.fr/wp-content/uploads/2016/04/image-2-egae-926x1800.jpg');
+}
+
+.menu-2{
+    background-image: url('https://groupe-egae.fr/wp-content/uploads/2016/04/image-1-egae-1000x1800.jpg');
+}
+
+.menu-3{
+    background-image: url('https://groupe-egae.fr/wp-content/uploads/2015/07/Asite_couv21.jpg');
+}
+
+.menu {
     width: 100%;
     height: 300px;
-    background-image: url('https://groupe-egae.fr/wp-content/uploads/2016/04/image-2-egae-926x1800.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: 50%;
+    padding-top: 6em
 }
 
-.menu-1 h1 {
+.menu h1 {
     font-weight: 900;
     font-size: 30px;
+}
+
+.menu p {
+    position: relative;
+    display: inline-block;
+    font-style: italic;
+    font-weight: 500;
+    line-height: 1.2;
+    width: 70%;
 }
 
 .trait {
     width: 22px;
     height: 5px;
     background-color: white;
+    margin-bottom: 1.5em;
 }
 
 
