--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,11 @@ a {
     color: white;
 }
 
+a:hover {
+    color: white;
+    text-decoration: none;
+}
+
 li {
     list-style-type: none;
 }
@@ -35,6 +40,8 @@ header {
     height: 300px;
     position: absolute;
     z-index: 1;
+    /*bottom: 0px;*/
+    transition:all ease .4s;
 }
 
 .overlay-index {
@@ -45,6 +52,7 @@ header {
     height: 5px;
     background-color: white;
     margin-bottom: 1.5em;
+    transition:all ease .4s;
 }
 
 .menu-1{
@@ -65,7 +73,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: 50%;
-    padding-top: 6em
+    
 }
 
 .menu-height {
@@ -75,6 +83,8 @@ header {
 .menu h1 {
     font-weight: 900;
     font-size: 30px;
+    transition:all ease .4s;
+    padding-top: 3em;
 }
 
 .menu p {
@@ -84,9 +94,47 @@ header {
     font-weight: 500;
     line-height: 1.2;
     width: 70%;
+    transition:all ease .4s;
 }
 
+.menu nav {
+    position: relative;
+    top: 75px;
+    transition:all ease .4s;
+    opacity: 0;
+}
 
+.menu ul {
+    padding-left: 0;
+}
+
+/************* ANIMATIONS **********/
+
+.menu:hover .overlay {
+    background: rgb(0, 0, 0, 0.6);
+}
+
+.menu:hover h1 {
+    transform: translateY(-75px);
+    opacity: 0;
+}
+.menu:hover .trait {
+    width: 80px;
+    height: 3px;
+    transform: translateY(-75px);
+    opacity: 0;
+}
+
+.menu:hover p {
+    transform: translateY(-75px);
+    opacity: 0;
+}
+
+.menu:hover nav {
+    top: 140px;
+    transform: translateY(-200px);
+    opacity: 1;
+}
 
 
 
@@ -227,10 +275,43 @@ footer i {
 
     .menu {
         height: 100vh;
+        padding-top: 0;
     }
 
     .overlay {
         height: 100vh;
+    }
+
+    .menu nav {
+        /*position: relative;*/
+        top: 425px;
+        transition:all ease .4s;
+    }
+
+    /******* ANIMATIONS *******/
+
+    .menu:hover .overlay {
+        background: rgb(0, 0, 0, 0.6);
+    }
+    
+    .menu:hover h1 {
+        transform: translateY(-75px);
+        opacity: 0.5;
+    }
+    .menu:hover .trait {
+        width: 80px;
+        height: 3px;
+        transform: translateY(-75px);
+        opacity: 0.5;
+    }
+    
+    .menu:hover p {
+        transform: translateY(-75px);
+        opacity: 0.5;
+    }
+    
+    .menu:hover nav {
+        transform: translateY(-200px);
     }
 
     #bloc-2 {
