Rendu menu pour mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -204,7 +204,7 @@ footer i {
         width: 220px;
         height: 110px;
     }
-    .overlay-index{
+    nav{
         display: none;
     }
 }
@@ -246,19 +246,20 @@ footer i {
 }
 
 @media (max-width:768px){
-    .menu h1{
-        position: relative;
-        top:-80px;
-    }
-    .menu span{
-        position: relative;
-        top:-80px;
-    }
-    .menu p{
-        position: relative;
-        top: -80px;
-    }
     .overlay-index{
-        display: block;
+        position: relative;
+        top:-90px;
     }
-}
+
+    nav{
+        display: block;
+        position: relative;
+        left: -28px;
+
+    }
+
+    li{
+        border: 1px solid white;
+        border-radius: 5px;
+        margin-bottom: 10px;
+    }
